[package]
name = "brainwires-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "MCP server framework with middleware pipeline for the Brainwires Agent Framework"
readme = "README.md"
documentation = "https://docs.rs/brainwires-mcp-server"
keywords = ["mcp", "server", "middleware", "tools", "json-rpc"]
categories = ["network-programming"]

[dependencies]
brainwires-mcp = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "sync", "macros"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
chrono = { workspace = true }
