[package]
name = "brainwires-mcp"
description = "MCP client, transport, and protocol types for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-mcp"
keywords = ["mcp", "context-protocol", "ai-tools", "llm", "protocol"]
categories = ["development-tools"]

[dependencies]
# Internal crates
brainwires-core.workspace = true

# MCP protocol (native only)
rmcp = { version = "1.1", features = ["client"], optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow.workspace = true

# Async runtime
tokio = { version = "1.43", features = ["sync"] }

# Filesystem (native only)
dirs = { workspace = true, optional = true }

[features]
default = ["native"]
native = ["dep:rmcp", "dep:dirs", "tokio/io-util", "tokio/process"]
wasm = ["brainwires-core/wasm"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
