[package]
name = "brainwires-mdap"
description = "MAKER voting framework - microagents, decomposition, red flags, and scaling for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Internal crates
brainwires-core.workspace = true

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror.workspace = true

# Async
tokio = { workspace = true, features = ["sync", "time"] }
async-trait.workspace = true

# Time
chrono.workspace = true

# Pattern matching
regex.workspace = true

# Identifiers
uuid.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true

[features]
default = ["native"]
native = []
wasm = ["brainwires-core/wasm"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
