[package]
name = "brainwires-memory"
description = "Tiered hot/warm/cold agent memory for the Brainwires Agent Framework — message/summary/fact stores, tier orchestration, plus the `dream` offline consolidation engine that demotes tiers and produces summaries/facts"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-memory"
keywords = ["agent-memory", "tiered-memory", "embeddings", "lancedb"]
categories = ["database"]

[dependencies]
# Internal crates
brainwires-core.workspace = true
brainwires-storage = { workspace = true, features = ["native"] }

# Arrow schema (used by `*_schema()` helpers under the `native` feature)
arrow-schema = { workspace = true, optional = true }

# Async runtime
tokio = { version = "1.43", features = ["sync", "time"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Identifiers & time
uuid.workspace = true
chrono.workspace = true

# Async traits
async-trait.workspace = true

# Logging
tracing.workspace = true

# Offline-consolidation deps (dream feature)
futures = { workspace = true, optional = true }

# Optional telemetry hook for dream (DreamCycle event recording)
brainwires-telemetry = { workspace = true, optional = true }

[features]
default = ["native"]
native = ["dep:arrow-schema"]

# Offline consolidation engine (folded in from brainwires-knowledge in Phase 6).
# Pulls `futures` for the async cycle plumbing; everything else is already in
# the always-on dep set (tokio sync/time, async-trait, anyhow, serde, chrono).
dream = ["dep:futures"]

# Wire dream's `with_analytics` hook to brainwires-telemetry's AnalyticsCollector.
telemetry = ["dream", "dep:brainwires-telemetry"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile.workspace = true

[[example]]
name = "tiered_memory"
required-features = ["native"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
