[package]
name = "brainwires-mesh"
description = "Distributed agent mesh networking for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
brainwires-core = { workspace = true }
brainwires-relay = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[features]
default = ["a2a"]
a2a = ["dep:brainwires-relay", "brainwires-relay/a2a"]
