[package]
name = "brainwires-mesh"
description = "Distributed agent mesh networking for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-mesh"
keywords = ["mesh-networking", "distributed", "agent-mesh", "topology", "routing"]
categories = ["network-programming"]

[dependencies]
brainwires-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
